// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addImportantToEachRule() should add !important to each rule 1`] = `
{
  "&:hover": {
    "&:focus": {
      "color": "orange !important",
    },
    "color": "blue !important",
  },
  "color": "red !important",
  "content": """ !important",
  "display": "block !important",
  "margin": "0 !important",
}
`;

exports[`getBackdropJssStyle() should return correct JssStyle for isVisible: false, zIndex: 9999, theme: dark and duration: moderate 1`] = `
{
  "WebkitBackdropFilter": "blur(0px)",
  "backdropFilter": "blur(0px)",
  "background": "rgba(38, 38, 41, 0.67)",
  "inset": 0,
  "opacity": 0,
  "pointerEvents": "none",
  "position": "fixed",
  "transition": "opacity var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0.4s)",
  "visibility": "hidden",
  "zIndex": 9999,
}
`;

exports[`getBackdropJssStyle() should return correct JssStyle for isVisible: false, zIndex: 9999, theme: dark and duration: veryLong 1`] = `
{
  "WebkitBackdropFilter": "blur(0px)",
  "backdropFilter": "blur(0px)",
  "background": "rgba(38, 38, 41, 0.67)",
  "inset": 0,
  "opacity": 0,
  "pointerEvents": "none",
  "position": "fixed",
  "transition": "opacity var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 1.2s)",
  "visibility": "hidden",
  "zIndex": 9999,
}
`;

exports[`getBackdropJssStyle() should return correct JssStyle for isVisible: true, zIndex: 9999, theme: light and duration: long 1`] = `
{
  "WebkitBackdropFilter": "blur(32px)",
  "backdropFilter": "blur(32px)",
  "background": "rgba(1, 2, 5, 0.67)",
  "inset": 0,
  "opacity": 1,
  "pointerEvents": "auto",
  "position": "fixed",
  "transition": "opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s)",
  "visibility": "inherit",
  "zIndex": 9999,
}
`;

exports[`getBackdropJssStyle() should return correct JssStyle for isVisible: true, zIndex: 9999, theme: light and duration: short 1`] = `
{
  "WebkitBackdropFilter": "blur(32px)",
  "backdropFilter": "blur(32px)",
  "background": "rgba(1, 2, 5, 0.67)",
  "inset": 0,
  "opacity": 1,
  "pointerEvents": "auto",
  "position": "fixed",
  "transition": "opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility 0s linear var(--p-transition-duration, 0s)",
  "visibility": "inherit",
  "zIndex": 9999,
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "fit-content",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: undefined 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: undefined 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getTransition() should for : 'box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s)' return: box-shadow: box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s) 1`] = `"box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s)"`;

exports[`getTransition() should for : 'box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s)' return: box-shadow: box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s) 1`] = `"box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s)' return: color: color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s) 1`] = `"color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)' return: color: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) 1`] = `"color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)' return: color: color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s) 1`] = `"color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)"`;
